# schedulegram

./: .gitignore  README.md
bot/: bot.py  cfg_parser.py  db_usage.py  get_stations.py  messages.py  requirements.txt
bot/database/: db_usage.py  get_stations.py
bot/handlers/: inlineMode_handler.py  keyboard_handler.py  messages_handler.py  on_startup_handler.py  users_handler.py
bot/keyboards/: keyboards.py
bot/states/: states.py
database/: schedule.db
parser/: CMakeLists.txt  build.bat  build.sh  build_ran.bat  db_usage.cpp  db_usage.hpp  main.cpp  params.json  readme.txt  requests.cpp  requests.hpp
